# rt_vision

coding_learning/: README_task01.md  task01.cpp
coding_learning/photo_system/: .gitignore  CMakeLists.txt  README.md
coding_learning/photo_system/app/: main.cpp
coding_learning/photo_system/include/rt_vision/: concurrent_base.hpp  image_base.hpp  image_formats.hpp  observer_interface.hpp  processors_base.hpp  processors_impl.hpp  system_main.hpp
coding_learning/photo_system/src/: image_base.cpp  image_formats.cpp  manager_impl.cpp  system_main.cpp
opencv/: .gitignore
opencv/task1/: read_show.cpp
opencv/task2/: hsv_tuner.cpp  task02.cpp
opencv/task3/: task03.cpp
opencv/task4/: videocapture.cpp  videocapture_tuner.cpp  webcam.cpp
src/Cpp/test_1203/: test_120301.cpp
